# gemma-study

./: .gitignore  Docker_README.md  Dockerfile  Gemma3_CPU_Text.ipynb  README.md  README_combined.md  gemma4_multimodal.py  main.py  output.txt  pyproject.toml  requirements.txt  run_bf16.slurm  run_int4.slurm  train_bf16_hpc.py  train_bf16_local.py  train_colab (1).py  train_colab.ipynb  train_colab.py  train_int4_hpc.py  train_int4_local.py  vit-ft.py
