[project]
name = "gemma-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
